--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -273,7 +273,7 @@
                         </ui-carousel>
                     </div>
                     <div class="col-sm-2 medicalwid">
-                        <div class="medicalCardInfoBox medicalCardInfoBoxShow medicalhgt" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow' : !infoToggle}">
+                        <div class="medicalCardInfoBox medicalCardInfoBoxShow medicalInfoWidth" id="medicalCardInfoBox" ng-class="{'medicalCardInfoBoxShow medicalInfoWidth' : !infoToggle}">
                             <h3>Medical card info</h3>
                             <ul>
                               <li>
@@ -289,7 +289,7 @@
                                 <span>Single</span>
                              </li>  
                              <li>
-                               <span>Member Network:</span>
+                               <span>Member N/W:</span>
                                <span>AEM</span>
                              </li> 
                              <li>
