--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -371,7 +371,7 @@
                                         <input type="number" ng-model="claim.manualDeduction">
                                     </md-input-container>
                                 </div>
-                                <div class="masterCodes col-sm-2.5 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px 0 19px;">
+                                <div class="masterCodes col-sm-2.5 float-left" style="border: 1px solid #b3b3b3;margin: 0 3px;">
                                     <md-autocomplete
                                         md-selected-item="claim.rejectionCode"
                                         md-search-text="rejectionText"
