--- a/css/style.css
+++ b/css/style.css
@@ -322,17 +322,15 @@ input.fileupload {
     border-radius: 5px;
     -webkit-box-shadow: 2px 5px 10px 0 rgba(0, 0, 0, 0.2);
     box-shadow: 2px 5px 10px 0 rgba(0, 0, 0, 0.2);
-    padding: 35px 50px;
-    width: 425px;
-    margin: 80px auto 0;
-    height: 57vh;
+    padding: 7px 12px;
+    margin: 33px auto 0;
 }
 
 .uploadPlaceHolder h2 {
     font: 16px/30px "open_sanssemibold";
     font-weight: normal;
     color: #00aeef;
-    padding: 0 0 25px;
+    /* padding: 0 0 25px; */
     margin: 0;
     text-transform: uppercase;
     text-align: center;
@@ -609,10 +607,11 @@ input.fileupload {
     height: 65px;
     text-align: center;
     padding-top: 16px;
-    height: 200px;
+    height: 90%;
     vertical-align: middle;
-    display: table-cell;
-    width: 303px;
+}
+.dragover {
+    border: 5px dashed blue;
 }
 
 .box-container {
@@ -668,8 +667,8 @@ input.fileupload {
 .upload-file-icon {
     font-size: 20px;
     float: right;
-    margin-right: 20px;
-    margin-top: -86px;
+    margin-right: 18px;
+    margin-top: -122px;
     border: 2px solid #d3d8de;
     padding: 6px;
     border-radius: 50%;
@@ -1656,4 +1655,8 @@ footer {
 }
 .medicalInfoWidth {
     width: 125% !important;
+}
+.docFont {
+    font: 13px "open_sanssemibold";
+    color: #333333;
 }
