--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -1,8 +1,9 @@
 <nav class="navbar pt-1 pb-1">
     <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Claims Registration</span>
+    <span class="navbar-brand p-0 m-0" ng-click="toggleUpload();"><i class="fa fa-bars"></i></span>
 </nav>
 <section class="">
-    <div class="leftContainer col-sm-7" ng-class="{'col-sm-12' : !showUpload, 'col-sm-7' : showUpload}">
+    <div class="leftContainer" ng-class="{'col-sm-12' : !showUpload, 'col-sm-7' : showUpload}">
         <div class="searchBar">
             <div class="searchBarRow">
                 <div layout-gt-sm="row" style="height:auto !important">
@@ -181,8 +182,8 @@
                 Documents                    
                 <button type="button" class="btn btn-outline-primary btn-sm float-right" ng-click="openUploadModal();">Upload</button>
                 <div ng-if="fileInfos.length > 0 && uploaded" id="thumbnailSlider" ng-style="{'padding-left' : fileInfos.length > 2 ? '15px' : '0px'}">
-                    <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="3" slides-to-scroll="3" initial-slide="0" style="width:85%;margin-bottom:0px;margin-left: 15px;padding-top: 24px;"
-                        infinite="false" name="thumbnailSlider" ng-class="{'img-padding' : ($parent.showUpload && $odd), 'img-padding' : !$parent.showUpload}">
+                    <ui-carousel slides="fileInfos" on-init="onCarouselInit()" slides-to-show="noOfSlides" slides-to-scroll="noOfSlides" initial-slide="0" style="width:85%;margin-bottom:0px;margin-left: 15px;padding-top: 24px;"
+                        infinite="false" name="'thumbnailSlider'" ng-class="{'img-padding' : ($parent.showUpload && $odd), 'img-padding' : !$parent.showUpload}">
                         <carousel-item>
                             <div class="row" style="float:right; padding-right: 30px; color:red;cursor:pointer;" ng-click="$parent.deleteFile($index)">
                                 <i class="fa fa-remove"></i>
@@ -275,4 +276,7 @@
             </div>
         </div>        
     </div>
+    <!-- <div style="position: absolute; float: right; width:auto">
+        
+    </div> -->
 </section>
