total calculation on footer section implemented

--- a/resources/reimbursement-claims/view/reimbursement-processing.html
+++ b/resources/reimbursement-claims/view/reimbursement-processing.html
@@ -506,19 +506,19 @@
                 <ul class="float-right clearfix mt-1">
                     <li class="float-left">
                         <span>Total deduction</span>
-                        <strong>1,50,900</strong>
+                        <strong>{{totalDeductionAmount | number}}</strong>
                     </li>
                     <li class="float-left">
                         <span>Total Penalty Amount</span>
-                        <strong>1,50,900</strong>
+                        <strong>{{totalPenaltyAmount | number}}</strong>
                     </li>
                     <li class="float-left">
                         <span>Total Approved Amount</span>
-                        <strong>1,50,900</strong>
+                        <strong>{{totalApprovedAmount | number}}</strong>
                     </li>
                     <li class="float-left">
                         <span>Rejected Amount</span>
-                        <strong>1,50,900</strong>
+                        <strong>{{totalRejectedAmount | number}}</strong>
                     </li>
                 </ul>
                 
