icon changed in registration screen

--- a/resources/registration/view/registration-general.html
+++ b/resources/registration/view/registration-general.html
@@ -1,6 +1,6 @@
 <nav class="navbar pt-1 pb-1">
     <span class="navbar-brand p-0 m-0" ui-sref="claim-registration">Claims Registration</span>
-    <span class="navbar-brand p-0 m-0" ng-click="toggleUpload();"><i class="fa fa-bars"></i></span>
+    <span class="navbar-brand p-0 m-0" ng-click="toggleUpload();"><i class="fa fa-plus-square-o" style="font-size: larger"></i></span>
 </nav>
 <section class="">
     <div class="leftContainer" ng-class="{'col-sm-12' : !showUpload, 'col-sm-7' : showUpload}">
